--- a/css/main.css
+++ b/css/main.css
@@ -502,4 +502,4 @@ img {vertical-align: middle;}
     border: none;
     cursor: pointer;
   }
-  .footer-white{width:100%; text-align: center; color:#000; font: 14px; padding: 20px 0; clear: both}
+  .footer_white{width:100%; text-align: center; color:#000; font: 14px; padding: 20px 0; clear: both}
